# playground

./: brs_multiple_ids.json  count_brs_ids.py  multiple_ids.ipynb  pyproject.toml  sparql_endpoint.py  tmp.json  use_endpoint.py
data/: invalid_meta.csv  meta_table_no_ids.csv
plots/: ids_per_journal_article.html
